--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ if (!doNotTrack) {
   <header>
     <h2 class="title"> <a href='https://grzegorz-zarnowiecki.github.io/post/spring-boot-v2-and-multiple-datasorces/'> Spring Boot V2 and Multiple Datasorces</a> </h2>
     <div class="meta">
-      Oct 27, 2018 - 1 minutes
+      Oct 27, 2018 - 2 minutes
     </div>
     
 <div class="tags">
@@ -191,10 +191,11 @@ if (!doNotTrack) {
   </header>
 
   <div class="summary">
-    <p>Hello</p>
+    <p>Cześć</p>
 
-<p>Finally i just read documentation and somme blogs, after merging proces I wrtite this code&hellip;:
-</p>
+<p>Tak wiem że w sieci jest 500 stron opisujących to zagadnienie ale gdy usiadłem do czytania na wielu było coś nie tak, głównie kwestie rozwoju Spring Boot i użycie nie wspieranych już metod konfiguracji. Zatem wszystko w komplecie macie tu:</p>
+
+<p></p>
     <a href='https://grzegorz-zarnowiecki.github.io/post/spring-boot-v2-and-multiple-datasorces/' class="rmore">Read more ...</a>
   </div>
 
