--- a/404.html
+++ b/404.html
@@ -184,7 +184,7 @@ if (!doNotTrack) {
       </article></li>
   
       <li><article itemscope itemtype="http://schema.org/Blog">
-          <a href="https://grzegorz-zarnowiecki.github.io/post/spring-boot-v2-and-multiple-datasorces/">Spring Boot V2 and Multiple Datasorces</a>
+          <a href="https://grzegorz-zarnowiecki.github.io/post/spring-boot-v2-and-multiple-datasorces/">Spring Boot V2 i wiele źródeł danych (multiple datasources)</a>
       </article></li>
   
   </ul>
